add popup calc ui

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-select": "^4.3.1",
     "react-table": "^7.7.0",
     "react-use": "^17.3.2",
+    "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.5",
     "web-vitals": "^1.1.2"
   },
